Update A+C to match Github (for documentation bits too)

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,4 +9,8 @@
 # Please keep the list sorted.
 
 Google Inc.
+Jay Graves <jaywgraves@gmail.com>
+Pius Uzamere <pius+github@alum.mit.edu>
 Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
+Timothy Armstrong <armstrong.timothy@gmail.com>
+Zihua Li <i@zihua.li>
