Fix typos and minor cleanup

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@
 #
 # Please keep the list sorted.
 
+Alexander Peters <info@alexanderpeters.de>
 Google Inc.
 Jay Graves <jaywgraves@gmail.com>
 Pius Uzamere <pius+github@alum.mit.edu>
