--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Alexander Peters <info@alexanderpeters.de>
 Google Inc.
 Jay Graves <jaywgraves@gmail.com>
 Jeremy Jay <jeremy@pbnjay.com>
+Martin Czygan <martin.czygan@gmail.com>
 Pius Uzamere <pius+github@alum.mit.edu>
 Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
 Timothy Armstrong <armstrong.timothy@gmail.com>
