Prevents repl panic

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@
 # Please keep the list sorted.
 
 Alexander Peters <info@alexanderpeters.de>
+Bram Leenders <bcleenders@gmail.com>
 Google Inc.
 Jay Graves <jaywgraves@gmail.com>
 Jeremy Jay <jeremy@pbnjay.com>
