Add myself to AUTHORS + CONTRIBUTORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@
 # Please keep the list sorted.
 
 Alexander Peters <info@alexanderpeters.de>
+Andrew Dunham <andrew@du.nham.ca>
 Bram Leenders <bcleenders@gmail.com>
 Google Inc.
 Jay Graves <jaywgraves@gmail.com>
