Added myself to the A+C

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Pius Uzamere <pius+github@alum.mit.edu>
 Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
 Timothy Armstrong <armstrong.timothy@gmail.com>
 Zihua Li <i@zihua.li>
+Stefan Koshiw <anonwasere@gmail.com>
