--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,8 @@ Jay Graves <jaywgraves@gmail.com>
 Jeremy Jay <jeremy@pbnjay.com>
 Pius Uzamere <pius+github@alum.mit.edu>
 Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
+Robert Melton <rmelton@gmail.com>
+Stefan Koshiw <anonwasere@gmail.com>
 Timothy Armstrong <armstrong.timothy@gmail.com>
 Zihua Li <i@zihua.li>
-Stefan Koshiw <anonwasere@gmail.com>
+
