--- a/AUTHORS
+++ b/AUTHORS
@@ -20,5 +20,5 @@ Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
 Robert Melton <rmelton@gmail.com>
 Stefan Koshiw <anonwasere@gmail.com>
 Timothy Armstrong <armstrong.timothy@gmail.com>
+Yannic Bonenberger <contact@yannic-bonenberger.com>
 Zihua Li <i@zihua.li>
-
