Add to contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@ Stefan Koshiw <anonwasere@gmail.com>
 Timothy Armstrong <armstrong.timothy@gmail.com>
 Yannic Bonenberger <contact@yannic-bonenberger.com>
 Zihua Li <i@zihua.li>
+Gaurav Tiwari <gaurav@gauravtiwari.co.uk>
