added myself to contributors and authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Derek Liang <fr.derekliang@gmail.com>
 Google Inc.
 Jay Graves <jaywgraves@gmail.com>
 Jeremy Jay <jeremy@pbnjay.com>
+Jørgen Teunis <cayley@jorgenteunis.com>
 Pius Uzamere <pius+github@alum.mit.edu>
 Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
 Robert Melton <rmelton@gmail.com>
