Update authors and contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ Jay Graves <jaywgraves@gmail.com>
 Jeremy Jay <jeremy@pbnjay.com>
 Jørgen Teunis <cayley@jorgenteunis.com>
 Pius Uzamere <pius+github@alum.mit.edu>
+QlikTech International AB 
 Robert Daniel Kortschak <dan.kortschak@adelaide.edu.au>
 Robert Melton <rmelton@gmail.com>
 Stefan Koshiw <anonwasere@gmail.com>
