--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@
 Alexander Peters <info@alexanderpeters.de>
 Andrew Dunham <andrew@du.nham.ca>
 Bram Leenders <bcleenders@gmail.com>
+Brendan Ball <ball.brendan50@gmail.com>
 Denys Smirnov <denis.smirnov.91@gmail.com>
 Derek Liang <fr.derekliang@gmail.com>
 Google Inc.
