Add @iddan to AUTHORS and CONTRIBUTORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Bram Leenders <bcleenders@gmail.com>
 Brendan Ball <ball.brendan50@gmail.com>
 Denys Smirnov <denis.smirnov.91@gmail.com>
 Derek Liang <fr.derekliang@gmail.com>
+Iddan Aaronsohn <mail@aniddan.com>
 Google Inc.
 Jay Graves <jaywgraves@gmail.com>
 Jeremy Jay <jeremy@pbnjay.com>
