all: Update all dependencies.

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,7 +12,7 @@ Alexander Peters <info@alexanderpeters.de>
 Andrew Dunham <andrew@du.nham.ca>
 Bram Leenders <bcleenders@gmail.com>
 Brendan Ball <ball.brendan50@gmail.com>
-Denys Smirnov <denis.smirnov.91@gmail.com>
+Denys Smirnov <dennwc@pm.me>
 Derek Liang <fr.derekliang@gmail.com>
 Iddan Aaronsohn <mail@aniddan.com>
 Google Inc.
